<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#1976D2"
        android:orientation="vertical"
        tools:context="com.example.android.quizapp.MainActivity">

        <EditText
            android:id="@+id/playerNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:hint="@string/player_name" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#1E88E5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Textview"
                        android:text="@string/question_1" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/one_1"
                            style="@style/RadioButton"
                            android:onClick="oneClicked"
                            android:text="@string/one_option_1" />

                        <RadioButton
                            android:id="@+id/one_2"
                            style="@style/RadioButton"
                            android:onClick="oneClicked"
                            android:text="@string/one_option_2" />

                        <RadioButton
                            android:id="@+id/one_3"
                            style="@style/RadioButton"
                            android:onClick="oneClicked"
                            android:text="@string/one_option_3" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2196F3"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Textview"
                        android:text="@string/question_2" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/two_1"
                            style="@style/RadioButton"
                            android:onClick="twoClicked"
                            android:text="@string/two_option_1" />

                        <RadioButton
                            android:id="@+id/two_2"
                            style="@style/RadioButton"
                            android:onClick="twoClicked"
                            android:text="@string/two_option_2" />

                        <RadioButton
                            android:id="@+id/two_3"
                            style="@style/RadioButton"
                            android:onClick="twoClicked"
                            android:text="@string/two_option_3" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#42A5F5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Textview"
                        android:text="@string/question_3" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/three_1"
                            style="@style/RadioButton"
                            android:onClick="threeClicked"
                            android:text="@string/three_option_1" />

                        <RadioButton
                            android:id="@+id/three_2"
                            style="@style/RadioButton"
                            android:onClick="threeClicked"
                            android:text="@string/three_option_2" />

                        <RadioButton
                            android:id="@+id/three_3"
                            style="@style/RadioButton"
                            android:onClick="threeClicked"
                            android:text="@string/three_option_3" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#64B5F6"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Textview"
                        android:text="@string/question_4" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/four_1"
                            style="@style/RadioButton"
                            android:onClick="fourClicked"
                            android:text="@string/four_option_1" />

                        <RadioButton
                            android:id="@+id/four_2"
                            style="@style/RadioButton"
                            android:onClick="fourClicked"
                            android:text="@string/four_option_2" />

                        <RadioButton
                            android:id="@+id/four_3"
                            style="@style/RadioButton"
                            android:onClick="fourClicked"
                            android:text="@string/four_option_3" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#90CAF9"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Textview"
                        android:text="@string/question_5" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/five_1"
                            style="@style/RadioButton"
                            android:onClick="fiveClicked"
                            android:text="@string/five_option_1" />

                        <RadioButton
                            android:id="@+id/five_2"
                            style="@style/RadioButton"
                            android:onClick="fiveClicked"
                            android:text="@string/five_option_2" />

                        <RadioButton
                            android:id="@+id/five_3"
                            style="@style/RadioButton"
                            android:onClick="fiveClicked"
                            android:text="@string/five_option_3" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#BBDEFB"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Textview"
                        android:text="@string/question_6" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/six_1"
                            style="@style/RadioButton"
                            android:onClick="sixClicked"
                            android:text="@string/six_option_1" />

                        <RadioButton
                            android:id="@+id/six_2"
                            style="@style/RadioButton"
                            android:onClick="sixClicked"
                            android:text="@string/six_option_2" />

                        <RadioButton
                            android:id="@+id/six_3"
                            style="@style/RadioButton"
                            android:onClick="sixClicked"
                            android:text="@string/six_option_3" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="#E3F2FD"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Textview"
                        android:text="@string/question_7" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:onClick="sevenClicked"
                            android:id="@+id/seven_1"
                            style="@style/RadioButton"

                            android:text="@string/seven_option_1" />

                        <RadioButton
                            android:onClick="sevenClicked"
                            android:id="@+id/seven_2"
                            style="@style/RadioButton"
                            android:text="@string/seven_option_2" />

                        <RadioButton
                            android:onClick="sevenClicked"
                            android:id="@+id/seven_3"
                            style="@style/RadioButton"
                            android:text="@string/seven_option_3" />
                    </RadioGroup>


                </LinearLayout>


            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="totalScore"
                android:text="@string/total_button"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/totalDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Score"
                android:textSize="35sp" />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>